--- a/archives/toutiao-search/2023-10-21.md
+++ b/archives/toutiao-search/2023-10-21.md
@@ -1,63 +1,80 @@
 # 2023-10-21
 
-共 181 条
+共 197 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 21 2023 13:06:00 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 21 2023 14:00:38 GMT+0800 (China Standard Time) -->
+1. [知情者称小便者非青岛啤酒员工](https://so.toutiao.com/search?keyword=知情者称小便者非青岛啤酒员工)
 1. [李玟今日于武汉安葬](https://so.toutiao.com/search?keyword=李玟今日于武汉安葬)
-1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
 1. [我国创新发展水平持续提升](https://so.toutiao.com/search?keyword=我国创新发展水平持续提升)
 1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
-1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
+1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
 1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
-1. [知情者称小便者非青岛啤酒员工](https://so.toutiao.com/search?keyword=知情者称小便者非青岛啤酒员工)
+1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
 1. [李玟下葬画面曝光 老公和继女未现身](https://so.toutiao.com/search?keyword=李玟下葬画面曝光+老公和继女未现身)
 1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
-1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
-1. [美官员：质疑以色列担心工作遭报复](https://so.toutiao.com/search?keyword=美官员：质疑以色列担心工作遭报复)
+1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
+1. [巴以局势持续紧张多国加大斡旋力度](https://so.toutiao.com/search?keyword=巴以局势持续紧张多国加大斡旋力度)
 1. [以色列逮捕哈马斯发言人等60多人](https://so.toutiao.com/search?keyword=以色列逮捕哈马斯发言人等60多人)
+1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
 1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
+1. [被哈马斯释放的两美国人质家属发声](https://so.toutiao.com/search?keyword=被哈马斯释放的两美国人质家属发声)
+1. [中国和斯里兰卡发布联合声明](https://so.toutiao.com/search?keyword=中国和斯里兰卡发布联合声明)
+1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
+1. [拜登称哈马斯袭击是为破坏沙以关系](https://so.toutiao.com/search?keyword=拜登称哈马斯袭击是为破坏沙以关系)
+1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
+1. [内蒙古乌兰浩特天空惊现鸟群盘旋](https://so.toutiao.com/search?keyword=内蒙古乌兰浩特天空惊现鸟群盘旋)
+1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
+1. [文班亚马19分5封盖 马刺送勇士首败](https://so.toutiao.com/search?keyword=文班亚马19分5封盖+马刺送勇士首败)
+1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
+1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
+1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
+1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
+1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
+1. [网红山西四人行上《星光大道》了](https://so.toutiao.com/search?keyword=网红山西四人行上《星光大道》了)
+1. [电瓶车女孩被卷入环卫车车底遭碾压](https://so.toutiao.com/search?keyword=电瓶车女孩被卷入环卫车车底遭碾压)
+1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
+1. [四川坠江宝马打捞出水 6旬女性身亡](https://so.toutiao.com/search?keyword=四川坠江宝马打捞出水+6旬女性身亡)
+1. [男子玩拖拉机漂移“漂”进交警队](https://so.toutiao.com/search?keyword=男子玩拖拉机漂移“漂”进交警队)
+1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
+1. [美《中国军力报告》遭中方驳斥](https://so.toutiao.com/search?keyword=美《中国军力报告》遭中方驳斥)
+1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [媒体：美敲打“台独”怕陷第三战场?](https://so.toutiao.com/search?keyword=媒体：美敲打“台独”怕陷第三战场?)
+1. [布达佩斯站覃海洋100米蛙泳夺冠](https://so.toutiao.com/search?keyword=布达佩斯站覃海洋100米蛙泳夺冠)
+1. [刘元春：明年中国经济积极因素较多](https://so.toutiao.com/search?keyword=刘元春：明年中国经济积极因素较多)
+1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
+1. [神十七发射在即 此次发射有何看点](https://so.toutiao.com/search?keyword=神十七发射在即+此次发射有何看点)
+1. [萝卜刀爆火后“创始人”仍住出租屋](https://so.toutiao.com/search?keyword=萝卜刀爆火后“创始人”仍住出租屋)
+1. [为何今年肺炎支原体感染明显增多](https://so.toutiao.com/search?keyword=为何今年肺炎支原体感染明显增多)
+1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
+1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
+1. [狗是人类最忠诚的朋友](https://so.toutiao.com/search?keyword=狗是人类最忠诚的朋友)
+1. [韩国瑜：赖清德见过最多贪官](https://so.toutiao.com/search?keyword=韩国瑜：赖清德见过最多贪官)
+1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
+1. [台风“三巴”已移出雷州半岛](https://so.toutiao.com/search?keyword=台风“三巴”已移出雷州半岛)
+1. [日本经济强势复苏？博主解读](https://so.toutiao.com/search?keyword=日本经济强势复苏？博主解读)
+1. [可可西里的网红狼胖了](https://so.toutiao.com/search?keyword=可可西里的网红狼胖了)
+1. [美官员：质疑以色列担心工作遭报复](https://so.toutiao.com/search?keyword=美官员：质疑以色列担心工作遭报复)
 1. [海合会-东盟峰会在沙特首都举行](https://so.toutiao.com/search?keyword=海合会-东盟峰会在沙特首都举行)
 1. [12306回应高铁200克葡萄售价60元](https://so.toutiao.com/search?keyword=12306回应高铁200克葡萄售价60元)
-1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
-1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
-1. [四川坠江宝马打捞出水 6旬女性身亡](https://so.toutiao.com/search?keyword=四川坠江宝马打捞出水+6旬女性身亡)
 1. [美媒警告：美国可能卷入新地区战争](https://so.toutiao.com/search?keyword=美媒警告：美国可能卷入新地区战争)
-1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
-1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
 1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
 1. [潘家园摊主谈卖摆件给智利总统](https://so.toutiao.com/search?keyword=潘家园摊主谈卖摆件给智利总统)
-1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
-1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
-1. [警方通报女童遭开门杀后被公交碾压](https://so.toutiao.com/search?keyword=警方通报女童遭开门杀后被公交碾压)
-1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
 1. [乌度卡：我们很满意阿门·汤普森](https://so.toutiao.com/search?keyword=乌度卡：我们很满意阿门·汤普森)
 1. [侯办称柯文哲提见面 柯办指侯邀约](https://so.toutiao.com/search?keyword=侯办称柯文哲提见面+柯办指侯邀约)
-1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
 1. [女子3次徒手将带油卤味偷塞包里](https://so.toutiao.com/search?keyword=女子3次徒手将带油卤味偷塞包里)
-1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
 1. [工信部：我国算力规模位居全球第二](https://so.toutiao.com/search?keyword=工信部：我国算力规模位居全球第二)
 1. [湖北省委巡视组原组长樊仁富被查](https://so.toutiao.com/search?keyword=湖北省委巡视组原组长樊仁富被查)
-1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
 1. [美共和党人将重新推选众议长候选人](https://so.toutiao.com/search?keyword=美共和党人将重新推选众议长候选人)
-1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
 1. [国安主帅：胜利源自团结拼搏](https://so.toutiao.com/search?keyword=国安主帅：胜利源自团结拼搏)
 1. [云茂高速茂名段因积水碎石交通中断](https://so.toutiao.com/search?keyword=云茂高速茂名段因积水碎石交通中断)
-1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
 1. [女子吐槽高铁一盒葡萄60元仅200克](https://so.toutiao.com/search?keyword=女子吐槽高铁一盒葡萄60元仅200克)
-1. [台风“三巴”已移出雷州半岛](https://so.toutiao.com/search?keyword=台风“三巴”已移出雷州半岛)
-1. [狗是人类最忠诚的朋友](https://so.toutiao.com/search?keyword=狗是人类最忠诚的朋友)
-1. [布达佩斯站覃海洋100米蛙泳夺冠](https://so.toutiao.com/search?keyword=布达佩斯站覃海洋100米蛙泳夺冠)
 1. [84岁钢琴家刘诗昆得子 发文感谢爱人](https://so.toutiao.com/search?keyword=84岁钢琴家刘诗昆得子+发文感谢爱人)
-1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
-1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
 1. [成都地铁回应乘客拿油纸伞进站被拦](https://so.toutiao.com/search?keyword=成都地铁回应乘客拿油纸伞进站被拦)
 1. [当专业医生看医疗剧《问心》](https://so.toutiao.com/search?keyword=当专业医生看医疗剧《问心》)
-1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
 1. [宁波一家三口相继患上支原体肺炎](https://so.toutiao.com/search?keyword=宁波一家三口相继患上支原体肺炎)
 1. [库里和文班亚马开场跳球](https://so.toutiao.com/search?keyword=库里和文班亚马开场跳球)
 1. [河南大哥非洲开会 中式英语火出圈](https://so.toutiao.com/search?keyword=河南大哥非洲开会+中式英语火出圈)
-1. [巴以局势持续紧张多国加大斡旋力度](https://so.toutiao.com/search?keyword=巴以局势持续紧张多国加大斡旋力度)
 1. [中美俄三国学者谈全球发展与未来](https://so.toutiao.com/search?keyword=中美俄三国学者谈全球发展与未来)
 1. [科大讯飞回应美国AI芯片出口管制](https://so.toutiao.com/search?keyword=科大讯飞回应美国AI芯片出口管制)
 1. [老人差点被洪水冲走 几位大哥出手](https://so.toutiao.com/search?keyword=老人差点被洪水冲走+几位大哥出手)
@@ -175,7 +192,6 @@
 1. [巴称以在约旦河西岸扣押巴勒斯坦人](https://so.toutiao.com/search?keyword=巴称以在约旦河西岸扣押巴勒斯坦人)
 1. [华为花瓣支付实现在鸿蒙系统底层化](https://so.toutiao.com/search?keyword=华为花瓣支付实现在鸿蒙系统底层化)
 1. [欧盟下周开“模仿中国版”峰会](https://so.toutiao.com/search?keyword=欧盟下周开“模仿中国版”峰会)
-1. [萝卜刀爆火后“创始人”仍住出租屋](https://so.toutiao.com/search?keyword=萝卜刀爆火后“创始人”仍住出租屋)
 1. [曝阿根廷国脚戈麦斯将被禁赛2年](https://so.toutiao.com/search?keyword=曝阿根廷国脚戈麦斯将被禁赛2年)
 1. [张学友五月天成都演唱会同日开唱](https://so.toutiao.com/search?keyword=张学友五月天成都演唱会同日开唱)
 1. [巴以战地日记系列](https://so.toutiao.com/search?keyword=巴以战地日记系列)
