--- a/archives/toutiao-search/2023-10-21.md
+++ b/archives/toutiao-search/2023-10-21.md
@@ -1,58 +1,75 @@
 # 2023-10-21
 
-共 213 条
+共 229 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Oct 21 2023 15:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Oct 21 2023 16:00:44 GMT+0800 (China Standard Time) -->
 1. [李玟雕像曝光](https://so.toutiao.com/search?keyword=李玟雕像曝光)
 1. [前车油量耗尽 后车司机看手机撞上](https://so.toutiao.com/search?keyword=前车油量耗尽+后车司机看手机撞上)
 1. [我国创新发展水平持续提升](https://so.toutiao.com/search?keyword=我国创新发展水平持续提升)
-1. [南京胖哥：为离开的女儿好好活着](https://so.toutiao.com/search?keyword=南京胖哥：为离开的女儿好好活着)
-1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
+1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
+1. [尼泊尔大使：“一带一路”带来机遇](https://so.toutiao.com/search?keyword=尼泊尔大使：“一带一路”带来机遇)
 1. [以防长公布对加沙地带战争计划](https://so.toutiao.com/search?keyword=以防长公布对加沙地带战争计划)
 1. [沈腾给谢楠表演了一个“吴京打采”](https://so.toutiao.com/search?keyword=沈腾给谢楠表演了一个“吴京打采”)
-1. [李玟下葬画面曝光 老公和继女未现身](https://so.toutiao.com/search?keyword=李玟下葬画面曝光+老公和继女未现身)
+1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
 1. [官方辟谣新疆和田地震后应急队伍出动](https://so.toutiao.com/search?keyword=官方辟谣新疆和田地震后应急队伍出动)
-1. [陕西省委：坚决拥护中央审查调查韩勇](https://so.toutiao.com/search?keyword=陕西省委：坚决拥护中央审查调查韩勇)
+1. [可可西里的网红狼胖了](https://so.toutiao.com/search?keyword=可可西里的网红狼胖了)
 1. [巴以局势持续紧张多国加大斡旋力度](https://so.toutiao.com/search?keyword=巴以局势持续紧张多国加大斡旋力度)
 1. [李玟今日于武汉安葬](https://so.toutiao.com/search?keyword=李玟今日于武汉安葬)
 1. [被哈马斯释放的两美国人质家属发声](https://so.toutiao.com/search?keyword=被哈马斯释放的两美国人质家属发声)
-1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
-1. [周润发现身香港小店拼桌用餐](https://so.toutiao.com/search?keyword=周润发现身香港小店拼桌用餐)
+1. [加沙地带与埃及的拉法口岸即将开放](https://so.toutiao.com/search?keyword=加沙地带与埃及的拉法口岸即将开放)
+1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
+1. [马斯克“X”平台拟向新用户收费](https://so.toutiao.com/search?keyword=马斯克“X”平台拟向新用户收费)
+1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
+1. [李玟下葬画面曝光 老公和继女未现身](https://so.toutiao.com/search?keyword=李玟下葬画面曝光+老公和继女未现身)
+1. [黎建南：“一带一路”不是中国独奏](https://so.toutiao.com/search?keyword=黎建南：“一带一路”不是中国独奏)
+1. [以称袭击黎巴嫩真主党多个军事目标](https://so.toutiao.com/search?keyword=以称袭击黎巴嫩真主党多个军事目标)
+1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
+1. [车主防暴雨积水花800元把车吊房顶](https://so.toutiao.com/search?keyword=车主防暴雨积水花800元把车吊房顶)
+1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
+1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
+1. [韩国政府：愿无条件与朝鲜对话](https://so.toutiao.com/search?keyword=韩国政府：愿无条件与朝鲜对话)
+1. [内蒙古乌兰浩特天空惊现鸟群盘旋](https://so.toutiao.com/search?keyword=内蒙古乌兰浩特天空惊现鸟群盘旋)
+1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
+1. [涂磊再谈上海女童事件](https://so.toutiao.com/search?keyword=涂磊再谈上海女童事件)
+1. [百万粉丝网红遭绑架撕票细节披露](https://so.toutiao.com/search?keyword=百万粉丝网红遭绑架撕票细节披露)
+1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
+1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
+1. [12306回应高铁200克葡萄售价60元](https://so.toutiao.com/search?keyword=12306回应高铁200克葡萄售价60元)
+1. [12人上山采挖野生白芨被民警查获](https://so.toutiao.com/search?keyword=12人上山采挖野生白芨被民警查获)
+1. [印度无人火箭试飞项目因故中断](https://so.toutiao.com/search?keyword=印度无人火箭试飞项目因故中断)
+1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
+1. [中纪委公布4名“内鬼”被处理消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被处理消息)
+1. [拜登回应哈马斯释放2名美国人质](https://so.toutiao.com/search?keyword=拜登回应哈马斯释放2名美国人质)
+1. [法国为何高调介入中东乱局](https://so.toutiao.com/search?keyword=法国为何高调介入中东乱局)
+1. [广西爆炸事故最后2名失联者送医](https://so.toutiao.com/search?keyword=广西爆炸事故最后2名失联者送医)
+1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
 1. [为何今年肺炎支原体感染明显增多](https://so.toutiao.com/search?keyword=为何今年肺炎支原体感染明显增多)
 1. [警方公开征集一女网红违法线索](https://so.toutiao.com/search?keyword=警方公开征集一女网红违法线索)
-1. [女司机不卸车衣盲开几米后追尾](https://so.toutiao.com/search?keyword=女司机不卸车衣盲开几米后追尾)
+1. [外媒：支持两场战争拜登有心无力](https://so.toutiao.com/search?keyword=外媒：支持两场战争拜登有心无力)
+1. [黄渤周迅首度合作正面对飙](https://so.toutiao.com/search?keyword=黄渤周迅首度合作正面对飙)
+1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
+1. [被流浪狗咬伤如何追责](https://so.toutiao.com/search?keyword=被流浪狗咬伤如何追责)
+1. [郁亮：目前楼市如同马拉松撞墙阶段](https://so.toutiao.com/search?keyword=郁亮：目前楼市如同马拉松撞墙阶段)
+1. [警号000001的“老虎”敛财5.5亿元](https://so.toutiao.com/search?keyword=警号000001的“老虎”敛财5.5亿元)
+1. [狗是人类最忠诚的朋友](https://so.toutiao.com/search?keyword=狗是人类最忠诚的朋友)
+1. [以军称打死3名黎巴嫩真主党成员](https://so.toutiao.com/search?keyword=以军称打死3名黎巴嫩真主党成员)
+1. [南京胖哥：为离开的女儿好好活着](https://so.toutiao.com/search?keyword=南京胖哥：为离开的女儿好好活着)
+1. [巴以地区冲突引发“蝴蝶效应”](https://so.toutiao.com/search?keyword=巴以地区冲突引发“蝴蝶效应”)
+1. [周润发现身香港小店拼桌用餐](https://so.toutiao.com/search?keyword=周润发现身香港小店拼桌用餐)
 1. [关于支原体肺炎的19个热点问题](https://so.toutiao.com/search?keyword=关于支原体肺炎的19个热点问题)
 1. [广西平果爆炸事故初步调查情况公布](https://so.toutiao.com/search?keyword=广西平果爆炸事故初步调查情况公布)
-1. [市监局调查啤酒厂职工原料仓小便](https://so.toutiao.com/search?keyword=市监局调查啤酒厂职工原料仓小便)
 1. [央媒：农田变深坑挖穿的是监管底线](https://so.toutiao.com/search?keyword=央媒：农田变深坑挖穿的是监管底线)
-1. [国务院取消调整33个罚款事项](https://so.toutiao.com/search?keyword=国务院取消调整33个罚款事项)
-1. [青岛啤酒涉事工厂曾被称为智慧工厂](https://so.toutiao.com/search?keyword=青岛啤酒涉事工厂曾被称为智慧工厂)
-1. [交警给违规车辆拍照贴条气笑了](https://so.toutiao.com/search?keyword=交警给违规车辆拍照贴条气笑了)
 1. [专家解读拜登讲话呼吁追加军援预算](https://so.toutiao.com/search?keyword=专家解读拜登讲话呼吁追加军援预算)
-1. [青岛啤酒公司回应员工在原料仓小便](https://so.toutiao.com/search?keyword=青岛啤酒公司回应员工在原料仓小便)
 1. [《王牌对王牌》唐嫣钟汉良再次搭档](https://so.toutiao.com/search?keyword=《王牌对王牌》唐嫣钟汉良再次搭档)
 1. [媒体：美敲打“台独”怕陷第三战场?](https://so.toutiao.com/search?keyword=媒体：美敲打“台独”怕陷第三战场?)
-1. [法国为何高调介入中东乱局](https://so.toutiao.com/search?keyword=法国为何高调介入中东乱局)
-1. [为什么电视剧行业不挣钱了](https://so.toutiao.com/search?keyword=为什么电视剧行业不挣钱了)
 1. [台风三巴影响广东部分河流出现洪水](https://so.toutiao.com/search?keyword=台风三巴影响广东部分河流出现洪水)
 1. [中国和斯里兰卡发布联合声明](https://so.toutiao.com/search?keyword=中国和斯里兰卡发布联合声明)
 1. [金正恩会见俄外长：热情微笑握手](https://so.toutiao.com/search?keyword=金正恩会见俄外长：热情微笑握手)
 1. [又有领导干部被点名“假离婚”](https://so.toutiao.com/search?keyword=又有领导干部被点名“假离婚”)
-1. [律师：1元拍到奔驰违约方应退车款](https://so.toutiao.com/search?keyword=律师：1元拍到奔驰违约方应退车款)
-1. [郁亮：目前楼市如同马拉松撞墙阶段](https://so.toutiao.com/search?keyword=郁亮：目前楼市如同马拉松撞墙阶段)
-1. [内蒙古乌兰浩特天空惊现鸟群盘旋](https://so.toutiao.com/search?keyword=内蒙古乌兰浩特天空惊现鸟群盘旋)
-1. [大哥遛狗很严谨再小的狗都要牵狗绳](https://so.toutiao.com/search?keyword=大哥遛狗很严谨再小的狗都要牵狗绳)
-1. [涂磊再谈上海女童事件](https://so.toutiao.com/search?keyword=涂磊再谈上海女童事件)
-1. [央视专访俄罗斯总统普京](https://so.toutiao.com/search?keyword=央视专访俄罗斯总统普京)
-1. [山东泰山发布伤情公告](https://so.toutiao.com/search?keyword=山东泰山发布伤情公告)
 1. [媒体评情侣住酒店一年后收亲密视频](https://so.toutiao.com/search?keyword=媒体评情侣住酒店一年后收亲密视频)
-1. [可可西里的网红狼胖了](https://so.toutiao.com/search?keyword=可可西里的网红狼胖了)
 1. [美战略轰炸机首降韩国 朝鲜发警告](https://so.toutiao.com/search?keyword=美战略轰炸机首降韩国+朝鲜发警告)
-1. [全国消防大比武](https://so.toutiao.com/search?keyword=全国消防大比武)
 1. [女儿出门前弄流行发型爸爸不满](https://so.toutiao.com/search?keyword=女儿出门前弄流行发型爸爸不满)
-1. [狗是人类最忠诚的朋友](https://so.toutiao.com/search?keyword=狗是人类最忠诚的朋友)
-1. [中纪委公布4名“内鬼”被处理消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被处理消息)
 1. [媒体批西方借“人权”干涉中国内政](https://so.toutiao.com/search?keyword=媒体批西方借“人权”干涉中国内政)
 1. [知情者称小便者非青岛啤酒员工](https://so.toutiao.com/search?keyword=知情者称小便者非青岛啤酒员工)
 1. [北京公交司机开车戴耳机养鸟系杜撰](https://so.toutiao.com/search?keyword=北京公交司机开车戴耳机养鸟系杜撰)
@@ -74,7 +91,6 @@
 1. [日本经济强势复苏？博主解读](https://so.toutiao.com/search?keyword=日本经济强势复苏？博主解读)
 1. [美官员：质疑以色列担心工作遭报复](https://so.toutiao.com/search?keyword=美官员：质疑以色列担心工作遭报复)
 1. [海合会-东盟峰会在沙特首都举行](https://so.toutiao.com/search?keyword=海合会-东盟峰会在沙特首都举行)
-1. [12306回应高铁200克葡萄售价60元](https://so.toutiao.com/search?keyword=12306回应高铁200克葡萄售价60元)
 1. [美媒警告：美国可能卷入新地区战争](https://so.toutiao.com/search?keyword=美媒警告：美国可能卷入新地区战争)
 1. [河北千亩农田被挖成大坑](https://so.toutiao.com/search?keyword=河北千亩农田被挖成大坑)
 1. [潘家园摊主谈卖摆件给智利总统](https://so.toutiao.com/search?keyword=潘家园摊主谈卖摆件给智利总统)
